--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -60,7 +60,7 @@
 }
 
 body {
-  width: 100vw;
+  /* width: 100vw; */
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
