--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,6 @@
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
 }
@@ -28,8 +27,8 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
     padding: 0 2rem;
   }
 }
